# py_3d

./: .gitignore  AGENT.md  README.md  init_example_game.py  pyproject.toml
.github/workflows/: publish.yml
USER/: settings.json
USER/demos/: 00_list_experiences.py  10_live_fruit_bowl_gpu.py  11_live_capsule_walk.py  12_live_fruit_bowl_mirror_prelight.py  13_live_fruit_bowl_poly_lamp.py  14_render_sea_lion_asset.py  15_render_fan_cloth_water.py  16_live_fruit_bowl_rgb_bulbs.py  17_render_hud_demo.py  18_live_wind_pool_water.py  19_live_procedural_environment.py  20_render_feature_previews.py  30_render_environment_videos.py  40_run_feature_tests.py  sim_settings.py
USER/primitives/: README.md  floating_bulletin.json  hanging_cone_lamp.json  lamp_primitive.json  low_poly_fruit_settings.json  sea_lion_idle_mesh.json  wood_bowl.json
USER/tests/: run_environment.py  test_demo_settings.py  test_procedural_demo_cli.py  test_procedural_environment.py
assets/sea-lion-import-test/: author-credit.md
docs/: live-demos.md  publishing.md  rendering.md
examples/: bumpy_ball_demo.py  capsule_walk_demo.py  collision_boundary_demo.py  fan_cloth_water_demo.py  fruit_bowl_demo.py  fruit_bowl_live.py  fruit_bowl_rgb_bulbs_live.py  gpu_render_benchmark.py  hud_demo.py  ingest_asset.py  live_navigation.py  offline_triangle.py  physics_gallery.py  physics_interaction.py  render_benchmark.py  render_bumpy_ball_video.py  render_fruit_bowl_variants.py  render_fruit_bowl_video.py  render_menu_showcase.py  rendering_gallery.py  rocket_tube_demo.py  sea_lion_asset_demo.py  slime_fluid_demo.py  texture_demo.py  textured_sphere_polygons.py  wind_pool_water_demo.py
src/py_3d/: __init__.py  assets.py  buffer.py  camera.py  cli.py  collision.py  color.py  draw.py  environment.py  fluid.py  gpu.py  hud.py  importers.py  inventory.py  lights.py  live.py  live_defaults.py  materials.py  math3d.py  noise.py  overlays.py  physics.py  player.py  portal.py  primitives.py  render.py  (+4 more)
tests/: test_assets.py  test_buffer.py  test_camera.py  test_cli.py  test_color_material.py  test_demo_behaviors.py  test_draw.py  test_fluid.py  test_importers.py  test_live.py  test_physics.py  test_portal_inventory.py  test_render.py  test_sky.py  test_textures.py  test_window.py
(+19 files in other folders)
