[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "py3dengine"
version = "0.0.2"
description = "Primitive 3D pixel drawing, rendering, and simulation foundations for Python."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "py_3d contributors" }]
dependencies = []
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Repository = "https://github.com/Daniel-J-Mueller/py_3d"
Issues = "https://github.com/Daniel-J-Mueller/py_3d/issues"

[project.scripts]
py3dengine = "py_3d.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]
gpu = ["py_gpu>=0.0.1"]
video = ["imageio-ffmpeg>=0.5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
